# server-fan-speed

./: Dockerfile  README.md  config.env  docker-compose.yml  main.py  pyproject.toml  run-server-fan-speed.sh  server-fan-speed.service
.github/workflows/: ci.yml  dockerhub-description.yml
