[project]
name = "server-fan-speed"
version = "0.1.0"
description = "Set Dell PowerEdge R210 ii fan speed (automatic/manual/speed) using Python3 with web interface"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.black]
line-length = 120
